crates/math-core/tests/snapshots/conversion_test__double_struck_cmds.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\N\\R\\Z"
---
<math>
    <mi>ℕ</mi>
    <mi>ℝ</mi>
    <mi>ℤ</mi>
</math>
