crates/math-core/tests/snapshots/conversion_test__double_subscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "g_{\\mu\\nu}"
---
<math>
    <msub>
        <mi>g</mi>
        <mrow>
            <mi>μ</mi>
            <mi>ν</mi>
        </mrow>
    </msub>
</math>
