crates/math-core/tests/snapshots/conversion_test__emph.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{\\emph{x}y}"
---
<math>
    <mrow>
        <mtext><em>x</em></mtext>
        <mtext>y</mtext>
    </mrow>
</math>
