crates/math-core/tests/snapshots/conversion_test__enspace.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\enspace x"
---
<math>
    <mi>x</mi>
    <mspace width="0.5em"/>
    <mi>x</mi>
</math>
