crates/math-core/tests/snapshots/conversion_test__eqref_to_last_row_label.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align} 1\\label{a}\\\\2\\label{b}\\end{align}\\eqref{b}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>1</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;" id="a">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mn>2</mn>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;" id="b">
                <mtext>(2)</mtext>
            </mtd>
        </mtr>
    </mtable>
    <mtext><a href="#b">(2)</a></mtext>
</math>
