crates/math-core/tests/snapshots/conversion_test__equal_after_plus_and_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x+ \\,= 4"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mspace width="0.16666667em"/>
    <mo>=</mo>
    <mn>4</mn>
</math>
